--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
 	<h3 class="py-5 border-top border-dark" data-aos="fade-left">
 	협회 연락처 및 오시는 길</h3>
 	<p data-aos="fade-left" data-aos-delay="200">
-	주소 : (03062) 서울시 종로구 삼청로 6, 출판문화회관 4층(사간동) <br>
-	전화 : 02) 737.0418
+	주소 : (03062) 서울시 종로구 삼청로 6, 출판문화회관 4층 <br>
+	전화 : 02) 737-0418
 	<p/><p/>
 	3호선 안국역 1번 출구 &rarr; 우측 방향으로 7분 정도 직진 &rarr; 란 스튜디오를 끼고 우측 방향 직진 &rarr; 검은색 4층 건물<p/>
 	3호선 경복궁역 5번 출구 &rarr; 경복궁 동문 방향 직진 &rarr; 맞은편 검은색 4층 건물<p/>
