--- a/index.html
+++ b/index.html
@@ -74,21 +74,17 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
     <a class="nav-link" href="#purpose" aria-label="Brings you to the frontpage">
-	<!--
-	<a class="nav-link" href="#services" aria-label="Brings you to the frontpage">
-	-->
-      설립 취지
+	<span class="fw-bold">설립 취지</span>
     </a>
   </li>
   <li class="nav-item">
 	<a class="nav-link" href="#vision">
-    <!-- <a class="nav-link" href="#aboutus"> -->
-      협회 비전
+    <span class="fw-bold">협회 비전</span>
     </a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#aboutus">
-      오시는 길
+    <span class="fw-bold">오시는 길</span>
     </a>
   </li>
   
@@ -186,16 +182,18 @@
 		<div class="row d-flex justify-content-between align-items-center">
 			<div class="col-lg-5">
 				<div class="row gx-5 d-flex">
+					
 					<div class="col-md-11">
-						<div class="shadow ratio ratio-16x9 rounded bg-cover bp-center align-self-end" data-aos="fade-right" style="background-image: url(img/webp/5F6A2555_blur.webp);--bs-aspect-ratio: 50%;">
+						<div class="shadow ratio ratio-16x9 rounded bg-cover bp-center align-self-end" data-aos="fade-right" style="background-image: url(img/webp/5F6A2539.webp);--bs-aspect-ratio: 50%;">
 						</div>
 					</div>
+					
 					<div class="col-md-5 offset-md-1">
-						<div class="shadow ratio ratio-1x1 rounded bg-cover mt-5 bp-center float-end" data-aos="fade-up" style="background-image: url(img/webp/5F6A2545_blur.webp);">
+						<div class="shadow ratio ratio-1x1 rounded bg-cover mt-5 bp-center float-end" data-aos="fade-up" style="background-image: url(img/webp/5F6A2545.webp);">
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="col-12 shadow ratio rounded bg-cover mt-5 bp-center" data-aos="fade-left" style="background-image: url(img/webp/5F6A2539_blur.webp);--bs-aspect-ratio: 120%;">
+						<div class="col-12 shadow ratio rounded bg-cover mt-5 bp-center" data-aos="fade-left" style="background-image: url(img/webp/kcvia_101_blur.webp);--bs-aspect-ratio: 120%;">
 						</div>
 					</div>
 				</div>
@@ -205,10 +203,12 @@
 				<h3 class="py-5 border-top border-dark" data-aos="fade-left">문화가치혁신협회는</h3>
 				<p class="fs-5 text-justify" data-aos="fade-left" data-aos-delay="200">
 				문화는 한 사회의 정체성과 삶의 질을 결정짓는 가장 근본적인 요소입니다. 
-				그중에서도 문화예술은 인간의 감성과 창의력을 통해 사회를 성찰하고 공동체를 연결하며, 미래를 향한 상상력을 자극하는 핵심적인 역할을 수행합니다. <br>
+				그중에서도 문화예술은 인간의 감성과 창의력을 통해 사회를 성찰하고 공동체를 연결하며, 미래를 향한 상상력을 자극하는 핵심적인 역할을 수행합니다. </p>
+				<p class="fs-5 text-justify" data-aos="fade-left" data-aos-delay="200">
 				하지만 이처럼 다양한 기여에도 불구하고, 우리 사회는 문화예술의 사회적 가치와 문화예술인의 권리에 대해 충분한 인식과 존중을 보여주지 못하고 있는 것이 현실입니다. 
 				문화예술인들 역시 자신의 창작활동을 과소평가하거나, 그 사회적 의미를 제대로 인정받지 못하는 상황에 놓여 있습니다. 
-				이는 개인의 문제가 아니라, 우리 사회 전체의 문화적 성숙도와 미래지향적 발전을 저해하는 구조적인 문제입니다. <br>
+				이는 개인의 문제가 아니라, 우리 사회 전체의 문화적 성숙도와 미래지향적 발전을 저해하는 구조적인 문제입니다. </p>
+				<p class="fs-5 text-justify" data-aos="fade-left" data-aos-delay="200">
 				이에 우리는 문화예술의 사회적 가치를 재조명하고, 그 가치를 널리 확산시키기 위한 공동의 노력을 시작하고자 합니다. 
 				문화예술인과 시민이 함께 참여할 수 있는 새로운 실천 공동체의 필요성이 제기되었고, 그 결실이 바로 『문화가치혁신협회』입니다.
 				</p>
@@ -228,9 +228,9 @@
 		</div>
 	  </div>
 	  <div class="row d-flex align-items-center">
-		<div class="col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="200">
+		<div class="col-md-3 col-lg-3" data-aos="fade-up" data-aos-delay="200">
 		<span class="h5 fw-lighter">01.</span>
-		<h3 class="py-5 border-top border-dark text-justify">문화예술의 사회적 가치 제고</h3>
+		<h4 class="py-5 border-top border-dark text-justify">문화예술의 사회적 가치 제고</h4>
 		<p class="text-justify">
 		- 문화예술의 공공적 의미를 사회 전반에 확산 <br>
 		- 문화예술 활동을 단순한 오락이 아닌 사회적 공익으로 재조명 <br>
@@ -240,9 +240,9 @@
   <!--   <a href="#" class="link-fancy">Learn more </a> -->
 		</div>
 
-		<div class="col-md-4 col-lg-3 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="400">
+		<div class="col-md-3 col-lg-3 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
 		<span class="h5 fw-lighter">02.</span>
-		<h3 class="py-5 border-top border-dark text-justify">문화예술인의 권익 보호와 창작 환경 개선</h3>
+		<h4 class="py-5 border-top border-dark text-justify">문화예술인의 권익 보호와 창작 환경 개선</h4>
 		<p class="text-justify">
 		- 문화예술인 스스로가 자신의 권리를 인식하고 실천할 수 있도록 지원 <br>
 		- 창작활동이 존중받는 제도적 기반 마련 <br>
@@ -251,9 +251,9 @@
 		</p>
 		</div>
 
-		<div class="col-md-4 col-lg-3 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="600">
+		<div class="col-md-3 col-lg-3 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
 		<span class="h5 fw-lighter">03.</span>
-		<h3 class="py-5 border-top border-dark text-justify">다양한 협업과 창조적 실험의 장 마련</h3>
+		<h4 class="py-5 border-top border-dark text-justify">다양한 협업과 창조적 실험의 장 마련</h4>
 		<p class="text-justify">
 		- 학계, 문화예술계, 시민사회 등 다양한 주체와 연대를 통한 문화가치의 공동 실천 <br>
 		- 문화정책 제안과 공공의제 발굴을 위한 협력적 연구 <br>
@@ -262,9 +262,9 @@
 		</p>
 		</div>
 		
-		<div class="col-md-4 col-lg-3 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="800">
+		<div class="col-md-3 col-lg-3 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="800">
 		<span class="h5 fw-lighter">04.</span>
-		<h3 class="py-5 border-top border-dark text-justify">지속가능한 문화생태계 조성</h3>
+		<h4 class="py-5 border-top border-dark text-justify">지속가능한 문화생태계 조성</h4>
 		<p class="text-justify">
 		- 서울시 및 지역 문화생태계에 대한 구조적 분석 수행 <br>
 		- 현장 예술인의 창작 환경과 정책 수요를 기반으로 한 실태 조사 <br>
