--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 	</a>
 	-->
 	<a class="navbar-brand pe-4 fs-4" href="#top">
-	<span class="ms-1 fw-bolder">(사)문화가치혁신협회</span>
-	</a>
+	<span class="ms-1 fw-bolder">(사)문화가치혁신협회 </span> 
+	</a>	
 	
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -228,47 +228,70 @@
 		</div>
 	  </div>
 	  <div class="row d-flex align-items-center">
-		<div class="col-md-3 col-lg-3" data-aos="fade-up" data-aos-delay="200">
-		<span class="h5 fw-lighter">01.</span>
+		<div class="col-md-3 col-lg-3 py-5" data-aos="fade-up" data-aos-delay="200">
+		<span class="h5 fw-lighter">01. 
+		<text class="h4 text-justify letter-s-2">문화예술</text></span>
+		<h4 class="py-3 border-top border-dark text-justify letter-s-2">사회적 가치 제고</h4>
+		<!--
 		<h4 class="py-5 border-top border-dark text-justify">문화예술의 사회적 가치 제고</h4>
-		<p class="text-justify">
-		- 문화예술의 공공적 의미를 사회 전반에 확산 <br>
-		- 문화예술 활동을 단순한 오락이 아닌 사회적 공익으로 재조명 <br>
-		- 문화예술 관련 연구, 시민 캠페인, 교육 프로그램의 지속적 운영 <br>
+		-->
+		
+		<p class="multiline-indent text-justify letter-s-1">
+		- 문화예술의 공공적 의미를 사회 전반에 확산 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 문화예술 활동을 단순한 오락이 아닌 사회적 공익으로 재조명 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 문화예술 관련 연구, 시민 캠페인, 교육 프로그램의 지속적 운영 </p>
+		<p class="multiline-indent text-justify letter-s-1">
 		- 사회 인식 변화와 문화적 공감대 형성을 위한 장기적 활동 기획
 		</p>
   <!--   <a href="#" class="link-fancy">Learn more </a> -->
 		</div>
 
-		<div class="col-md-3 col-lg-3 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
-		<span class="h5 fw-lighter">02.</span>
+		<div class="col-md-3 col-lg-3 py-vh-3 pb-0" data-aos="fade-up" data-aos-delay="400">
+		<span class="h5 fw-lighter">02.
+		<text class="h4 text-justify letter-s-2">문화예술인</text></span>
+		<h4 class="py-3 border-top border-dark text-justify letter-s-2">권익 보호 및 개선</h4>
+		<!--
 		<h4 class="py-5 border-top border-dark text-justify">문화예술인의 권익 보호와 창작 환경 개선</h4>
-		<p class="text-justify">
-		- 문화예술인 스스로가 자신의 권리를 인식하고 실천할 수 있도록 지원 <br>
-		- 창작활동이 존중받는 제도적 기반 마련 <br>
-		- 권리 보호, 세제, 복지, 법률 등 문화예술의 전반에 걸친 정보 제공과 교육 <br>
+		-->
+		<p class="multiline-indent text-justify letter-s-1">
+		- 문화예술인 스스로가 자신의 권리를 인식하고 실천할 수 있도록 지원 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 창작활동이 존중받는 제도적 기반 마련 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 권리 보호, 세제, 복지, 법률 등 문화예술의 전반에 걸친 정보 제공과 교육 </p>
+		<p class="multiline-indent text-justify letter-s-1">
 		- 예술인이 창작에 집중할 수 있는 환경 조성을 위한 현장 중심의 접근
 		</p>
 		</div>
 
-		<div class="col-md-3 col-lg-3 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
-		<span class="h5 fw-lighter">03.</span>
-		<h4 class="py-5 border-top border-dark text-justify">다양한 협업과 창조적 실험의 장 마련</h4>
-		<p class="text-justify">
-		- 학계, 문화예술계, 시민사회 등 다양한 주체와 연대를 통한 문화가치의 공동 실천 <br>
-		- 문화정책 제안과 공공의제 발굴을 위한 협력적 연구 <br>
-		- 새로운 창작 방식과 문화 접근 방식 등의 실험 추진 <br>
+		<div class="col-md-3 col-lg-3 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="600">
+		<span class="h5 fw-lighter">03.
+		<text class="h4 text-justify letter-s-2">다양한 협업</text></span>
+		<h4 class="py-3 border-top border-dark text-justify letter-s-2">창조적 실험의 장 마련</h4>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 학계, 문화예술계, 시민사회 등 다양한 주체와 연대를 통한 문화가치의 공동 실천 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 문화정책 제안과 공공의제 발굴을 위한 협력적 연구 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 새로운 창작 방식과 문화 접근 방식 등의 실험 추진 </p>
+		<p class="multiline-indent text-justify letter-s-1">
 		- 다양한 공동 창작을 통해 새로운 문화정책 제안과 창작 생태계 모색
 		</p>
 		</div>
 		
-		<div class="col-md-3 col-lg-3 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="800">
-		<span class="h5 fw-lighter">04.</span>
-		<h4 class="py-5 border-top border-dark text-justify">지속가능한 문화생태계 조성</h4>
-		<p class="text-justify">
-		- 서울시 및 지역 문화생태계에 대한 구조적 분석 수행 <br>
-		- 현장 예술인의 창작 환경과 정책 수요를 기반으로 한 실태 조사 <br>
-		- 문화예술 활동의 지속가능성을 위한 제도적 대안 제시 <br>
+		<div class="col-md-3 col-lg-3 py-vh-7 pb-0" data-aos="fade-up" data-aos-delay="800">
+		<span class="h5 fw-lighter">04.
+		<text class="h4 text-justify letter-s-2">문화생태계</text></span>
+		<h4 class="py-3 border-top border-dark text-justify letter-s-2">지속가능한 환경 조성</h4>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 서울시 및 지역 문화생태계에 대한 구조적 분석 수행 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 현장 예술인의 창작 환경과 정책 수요를 기반으로 한 실태 조사 </p>
+		<p class="multiline-indent text-justify letter-s-1">
+		- 문화예술 활동의 지속가능성을 위한 제도적 대안 제시 </p>
+		<p class="multiline-indent text-justify letter-s-1">
 		- 지역 예술인, 기획자, 시민단체 등과 연계한 실천 전략 수립
 		</p>
 		</div>
@@ -733,9 +756,10 @@
 				<path d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z"/>
 				</svg>
 				-->
-				
+									
 				<text class="h6 py-3 text-secondary"> 사단법인 </text><p class="py-2"/>
-				<text class="h3 py-3 text-secondary border-dark"> 문화가치혁신협회 </text>
+				<text class="h3 py-3 text-secondary border-dark"> 문화가치혁신협회 </text><br>
+				<text class="py-3 text-secondary letter-s-1"> Korea Cultural Value Innovation Association </text>
 				<!--
 				<h3 class="py-3 text-secondary border-dark">
 				(사)문화가치혁신협회
@@ -746,9 +770,9 @@
 			<div class="col-12 col-lg-6 col-xl-8 p-1 text-start">
 				<address class="text-secondary mt-1 COPYRIGHT">
 				(03062) 서울시 종로구 삼청로 6, 출판문화회관 4층(사간동) <p/>
-				<abbr title="Phone">TEL:</abbr>
-				02) 737-0418 <p/>
-				COPYRIGHT 2025. Korea Cultural Value Innovation Association, All rights reserved. 
+				전화: 02) 737-0418 <p/>
+				<text class="letter-s-1">
+				Copyright 2025. Korea Cultural Value Innovation Association, All rights reserved. </text>
 				</address>
 			</div>
 			
